tests/miniJava/neg/004404_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] class ( ) { return 0 ; } }
